@@ -1,5 +1,6 @@
 1.0.0
 -----
+ * Updating traffic shaping options throws IllegalStateException (CASSANDRASC-140)
  * Add restore job progress endpoint and consistency check on restore ranges (CASSANDRASC-132)
  * Upgrade asciidoctor plugin to version 3.3.2 (CASSANDRASC-139)
  * Bump AWS SDK version to 2.26.12 (CASSANDRASC-137)
